--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ numpy==1.16.2
 dash==0.40.0
 dash_core_components==0.45.0
 nltk==3.4.1
+scikit-learn==0.20.3
 pandas==0.24.2
 Flask==1.0.2
 plotly==3.7.0
